tests/tables/fails/parser/unexpected_tokens5.tbl
# CHECK: fails/parser/unexpected_tokens5.tbl(4,23): error: Expected ), got '&'. Did you mean '&&'?
# CHECK: table foo = inherit(a & b)
# CHECK:                       ^
table foo = inherit(a & b)
